[package]
name = "drogue-rak811"
version = "0.4.0"
authors = ["Ulf Lilleengen <lulf@redhat.com>"]
edition = "2018"
license = "Apache-2.0"
description = "Networking stack for RAK811 LoRa breakout board"
readme = "README.md"
repository = "https://github.com/drogue-iot/drogue-rak811"
homepage = "https://blog.drogue.io"
categories = ["embedded", "no-std", "network-programming"]
keywords = ["driver", "rak811", "network", "lora", "no_std"]

[dependencies]
embedded-hal = "0.2.4"
nb = "0.1.2"
heapless = "0.5.5"
log = "0.4.11"
moveslice = "2.0.1"

[dependencies.nom]
version = "5.1.2"
default-features = false
