[package]
name = "lora-tracker"
version = "0.1.0"
authors = ["Ulf Lilleengen <lulf@redhat.com>"]
edition = "2018"

[dependencies]
cortex-m = "0.6.4"
cortex-m-rt = { version = "0.6.11", features = ["device"] }
cortex-m-rtic = "0.5.5"
rtt-target = {version = "0.2.0", features = ["cortex-m"] }
panic-halt = "0.2.0"
log = "0.4.11"
rtt-logger = "0.1.0"
# sx127x_lora = { path = "../../../../sx127x_lora" }
stm32l1 = { version = "0.12.1", features = ["rt", "stm32l151" ] }
stm32l1xx-hal = { git = "https://github.com/stm32-rs/stm32l1xx-hal", features = ["rt", "stm32l151" ] }
#log = "0.4.11"
# rtt-logger = "0.1.0"
nb = "1.0.0"
embedded-hal = { version = "0.2.3", features = ["unproven"] }
void = { version = "1.0.2", default-features = false }
# drogue-rak811 = { path = "../../" }
# heapless = "0.5.5"

[[bin]]
name = "lora-tracker"
test = false
bench = false
